# cs-demo-analyst

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.md
.github/workflows/: release.yml  validate.yml
apps/desktop/: nuxt.config.ts  package.json
apps/desktop/app/: app.vue
apps/desktop/app/composables/: useAppStatus.ts  useTauri.ts
apps/desktop/app/layouts/: default.vue
apps/desktop/app/pages/: accounts.vue  downloads.vue  index.vue  (+1 more)
crates/tauri-app/: package.json
crates/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-app/src-tauri/icons/: icon.icns  icon.png.b64
crates/tauri-app/src-tauri/resources/sidecar/: handlers.js  index.js  package-lock.json  package.json  rpc.js
crates/tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/tauri-app/src-tauri/src/database/: mod.rs  repo.rs
crates/tauri-app/src-tauri/src/db/: mod.rs  models.rs  repo.rs
crates/tauri-app/src-tauri/src/orchestrator/: mod.rs
crates/tauri-app/src-tauri/src/sidecar/: mod.rs
docs/: README.md  architecture.md  build.md  ci.md  development.md
migrations/duckdb/: 001_initial.sql
migrations/sqlite/: 001_initial.sql
scripts/: bundle-sidecar.mjs  collect-bundle.mjs  dev.mjs  generate-icons.mjs  sync-version.mjs
scripts/common/: bundle-sidecar.mjs  generate-icons.mjs  sync-version.mjs
scripts/lib/: msvc.mjs  paths.mjs  run.mjs
scripts/release/: collect.mjs  index.mjs  package.mjs
scripts/validate/: frontend.mjs  index.mjs  rust.mjs  typescript.mjs
(+2 files in other folders)
